add: nuevos archivos

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
     <meta content="" name="description" />
     <meta content="" name="author" />
+    <link rel='shortcut icon' href='imagenes/cat.png' type='image/x-icon' sizes="16x16" />
     <!-- ================== SCRIPTS JS ================== -->
     <script src=""></script>
     <script src=""></script>
-    <title>Title</title>
+    <title>Diana Garcia</title>
+    <style type="text/css">
+        h3{
+            color: red;
+        }
+    </style>
+    <link href="estilos.css" rel="stylesheet"/>
 </head>
 <body>
-   
 <script>
 </script>
 </body>
