--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
     <meta content="" name="description" />
-    <meta content="" name="author" />
+    <meta content="DIANA" name="author" />
     <link rel='shortcut icon' href='imagenes/cat.png' type='image/x-icon' sizes="16x16" />
     <!-- ================== SCRIPTS JS ================== -->
     <script src=""></script>
