--- a/index.html
+++ b/index.html
@@ -18,6 +18,32 @@
     <link href="estilos.css" rel="stylesheet"/>
 </head>
 <body>
+    <div style="background: black">
+        <img src="imagenes/6.jpg" alt="Girl in a jacket" width="200" height="200">
+        <img src="imagenes/6.jpg" alt="Girl in a jacket" width="200" height="200">
+        <img src="imagenes/6.jpg" alt="Girl in a jacket" width="200" height="200">
+    </div>
+    <div style="background: red; width: 50%">
+        <img src="imagenes/cat.png" alt="Girl in a jacket" width="200" height="200">
+    </div>
+    <div style="background: pink">
+        <img src="imagenes/cat.png" alt="Girl in a jacket" width="200" height="200">
+    </div>
+
+
+<div class="myDiv">
+  <h2>This is a heading in a div element</h2>
+  <p align="center">This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.This is some text in a div element.</p>
+</div>
+
+
+
+<header>
+  <h1>Main page heading here</h1>
+  <p>Posted by John Doe</p>
+</header>
+
+
 <script>
 </script>
 </body>
